bpo-36791: Safer detection of integer overflow in sum(). (GH-13080)

(cherry picked from commit 29500737d45cbca9604d9ce845fb2acc3f531401)

Co-authored-by: Serhiy Storchaka <storchaka@gmail.com>